<resources>
    <string name="app_name">GraphLD</string>
    <string name="reset_button">Reinitialiser</string>
    <string name="delete_button">Supprimer</string>
    <string name="node_mode">Mode Noeud</string>
    <string name="mode_arc_button">Mode Arc</string>
    <string name="edition_mode_button">Mode Edition</string>
    <string name="item_delete_node"> Supprimer </string>
    <string name="item_modify_node_label">Modifier l\'etiquette du noeud</string>
    <string name="item_modify_node_size">Modifier la taille du noeud</string>
    <string name="item_modify_node_color">Modifier la couleur du noeud</string>
    <string name="popup_add_arc_message">Saisissez l\'étiquette de l\'arc</string>
    <string name="popup_validate">Valider</string>
    <string name="popup_add_arc_title">Ajout d\'un arc</string>
    <string name="popup_modify_label_node">Modifier l\'étiquette du noeud</string>
    <string name="popup_modify_label_node_message">Saisissez l\'étiquette du noeud</string>
    <string name="color_noir">Noir</string>
    <string name="color_red">Rouge</string>
    <string name="color_orange">Orange</string>
    <string name="color_blue">Bleu</string>
    <string name="color_green">Vert</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Mangenta</string>
    <string name="popup_modify_color_node_message">Choisissez une couleur</string>
    <string name="item_send_email">Envoyer le graphe par email</string>
    <string name="item_delete_arc">Supprimer l\'arc</string>
    <string name="item_modify_arc_color">Modifier la couleur de l\'arc</string>
    <string name="item_modify_arc_label">Modifier l\'étiquette de l\'arc</string>
    <string name="item_modify_arc_thickness">Modifier l\'épaisseur de l\'arc</string>
    <string name="item_modify_label_arc_size">Modifier la taille de l\'étiquette de l\'arc</string>
    <string name="popup_modify_node_size_message">Saisissez la nouvelle taille du noeud (entre 50 et 250)</string>
    <string name="popup_modify_node_size">Modifier la taille du noeud</string>
    <string name="item_modify_node_label_color">Modifier la couleur de l\'étiquette</string>
    <string name="popup_modify_arc_label_message">Saisissez la nouvelle étiquette de l\'arc</string>
    <string name="popup_modify_arc_label_title">Modifier l\'étiquette de l\'arc</string>
    <string name="popup_modify_arc_label_size">Modifier la taille de l\'étiquette</string>
    <string name="popup_modify_arc_size_label_message">Saisissez la taille de l\'étiquette (entre 20 et 100)</string>
    <string name="popup_modify_arc_thickness">Modifier l\'épaisseur de l\'arc</string>
    <string name="popup_modify_arc_thickness_message">Saisissez une épaisseur pour l\'arc entre 1 et 25</string>
    <string name="title_appli">Graph Lebreton/Dubois</string>
    <string name="add_node_menu">Ajouter un nouveau noeud</string>
    <string name="title_graph">Graphe</string>
    <string name="graph_description">Nouveau graphe</string>
    <string name="save_graph">Sauvegarder le graphe</string>
    <string name="display_graph">Afficher le graphe sauvegardé</string>
</resources>
